[gd_scene load_steps=3 format=3 uid="uid://b4ert6b0gtk7m"]

[ext_resource type="Theme" uid="uid://citcf1vymhp3" path="res://assets/resources/gui/onlinemenu_theme.tres" id="1_a14vf"]
[ext_resource type="Script" path="res://scripts/gui/menu/online/OnlineMenu.gd" id="2_uvya8"]

[node name="OnlineMenu" type="Control"]
layout_mode = 3
anchor_top = 0.075
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a14vf")
script = ExtResource("2_uvya8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MenuControls" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LobbyCreationButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls"]
layout_mode = 2
size_flags_vertical = 0
text = "Create Lobby"

[node name="DirectConnectButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls"]
layout_mode = 2
size_flags_vertical = 0
text = "Direct Connect"

[node name="RefreshButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls"]
layout_mode = 2
size_flags_vertical = 0
text = "Refresh"

[node name="LobbySearchControls" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Searchbar" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls/LobbySearchControls"]
layout_mode = 2

[node name="DropdownFilters" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls/LobbySearchControls"]
layout_mode = 2
alignment = 2

[node name="TypeFilter" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls/LobbySearchControls/DropdownFilters"]
layout_mode = 2

[node name="StateFilter" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/MenuControls/LobbySearchControls/DropdownFilters"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="LobbyTileContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyCreationDialogue" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.064
anchor_right = 0.2
anchor_bottom = 0.25

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyCreationDialogue"]
layout_mode = 2

[node name="CloseLobbyDialogueButton" type="Button" parent="LobbyCreationDialogue/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="LobbyCreationDialogue/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyCreationDialogue/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NameEntryTitle" type="Label" parent="LobbyCreationDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby Name"

[node name="NameEntryLine" type="LineEdit" parent="LobbyCreationDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PasswordEntryTitle" type="Label" parent="LobbyCreationDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby Password"

[node name="PasswordEntryLine" type="LineEdit" parent="LobbyCreationDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateLobbyButton" type="Button" parent="LobbyCreationDialogue/VBoxContainer"]
layout_mode = 2
text = "Create Lobby"

[node name="DirectConnectDialogue" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.064
anchor_right = 0.2
anchor_bottom = 0.25

[node name="VBoxContainer" type="VBoxContainer" parent="DirectConnectDialogue"]
layout_mode = 2

[node name="CloseDCDialogueButton" type="Button" parent="DirectConnectDialogue/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="DirectConnectDialogue/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DirectConnectDialogue/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="IPEntryTitle" type="Label" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "IP Address"

[node name="IPEntryLine" type="LineEdit" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"

[node name="PortEntryTitle" type="Label" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Port"

[node name="PortEntryLine" type="LineEdit" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "6000"

[node name="HBoxContainer" type="HBoxContainer" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DCServerButton" type="Button" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Server"

[node name="DCClientButton" type="Button" parent="DirectConnectDialogue/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Client"
